--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">shuming2-reflex</string>
 
-    <string name="timer_guide">After click on the start button, the game waits a short time before prompting you to click.</string>
+    <string name="timer_guide">After click on the start button, the game waits a short time before prompting you to click.\n\n\n</string>
+    <string name="buzzer_guide">Choose the number of player.\n\n\n</string>
     <string name="action_settings">Settings</string>
 </resources>
