Add licenses and apk file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
-    <string name="app_name">shuming2-reflex</string>
 
-    <string name="timer_guide">After click the button, the game waits a short time before prompting you to click.\n\n\n</string>
-    <string name="buzzer_guide">Choose the number of player.\n\n\n</string>
+    //new addition
+    <string name="app_name">shuming2-reflex</string>
+    <string name="timer_guide">\n\n\nAfter click the button, the game waits a short time before changing the button color and telling you to click.\n\n\n</string>
+    <string name="buzzer_guide">\n\n\nChoose the number of player.\n\n\n</string>
+
+
     <string name="action_settings">Settings</string>
 </resources>
